made footer fixed and fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,16 @@
 }
 
 * {
-	font-family: 'player2';	
+	font-family: 'player2';
 }
 
 .background {
 	background-image: url('../images/background/Background_Main.png'), url('../images/background/Background_Fill.png');
 	background-repeat: repeat-x, repeat;
+	background-attachment: fixed;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
-
 
 /*BLACK BANNER SECTION
 =====================================================================*/
@@ -23,6 +25,13 @@
 	width: 100%;
 	height: 48px;
 	background-image: url('../images/background/Banner_StretchWide.png');
+	position: fixed;
+	z-index: 100;
+}
+
+#footer {
+	left: 0px;
+	bottom: 0px;
 }
 
 .leftAlignBar {
@@ -33,10 +42,10 @@
 }
 
 .rightAlignBar {
-	padding: 16px 0px 0px 35%;
+	padding: 16px 15% 0px 0px;
 	font-size: 12px;
 	color: #68663F;
-	float: left;
+	float: right;
 }
 
 a.banneremail, a.banneremail:visited {
@@ -56,7 +65,6 @@ a.banneremail:hover, a.banneremail:active {
 .firstrow {
 	width: 1100px;
 	margin: 0 auto;
-	padding-top: 15px;
 }
 
 #playerprofile {
@@ -146,7 +154,6 @@ a.contactLink:hover, a.contactLink:active {
     border-image-slice: 60;
     border-image-width: 20;
     border-image-outset: 1;
-    z-index: 10;
     margin: 0 auto;
 }
 
@@ -176,7 +183,6 @@ a.contactLink:hover, a.contactLink:active {
 
 .borderheader {
 	float: left;
-	z-index: 100;
 	position: relative;
 	display: inline;
 	height: 56px;
@@ -198,20 +204,11 @@ a.contactLink:hover, a.contactLink:active {
 
 #welcome {
 	margin-top: 15px;
-	height: 200px;
+	height: 280px;
 }
 
 #welcomeText {
-	height: 110px;
-}
-
-#recentProjects {
-	margin-top: 15px;
-	height: 300px;
-}
-
-#recentProjectsText {
-	height: 200px;
+	height: 190px;
 }
 
 #aboutMe {
